# TaameKhoob

./: README.md  pyproject.toml
src/taamekhoob/delivery/: inhouse.py  interface.py  snappbox_adapter.py  tapsi_adapter.py
src/taamekhoob/facades/: kitchen_facade.py  ordering_facade.py  reporting_facade.py
src/taamekhoob/infrastructure/: config_manager.py  db_manager.py  logger.py
src/taamekhoob/menu/: concrete_items.py  decorators.py  factory.py  item.py  ui_factory.py
src/taamekhoob/notification/: decorators.py  notifier.py
src/taamekhoob/order/: builder.py  order.py  templates.py
src/taamekhoob/payment/: idpay_adapter.py  interface.py  nextpay_adapter.py  parsian_adapter.py  zarinpal_adapter.py
src/taamekhoob/services/: inventory_service.py
tests/: test_builder.py  test_final_demo.py  test_menu_decorators.py  test_notifications.py  test_payment_adapters.py  test_singletons.py
